trunk/Archive2/1b/1207a2b6189538/output
main.cpp:11:30: error: use of undeclared identifier 'ch'
    std::cout << channel_map[ch] << std::endl;
                             ^
1 error generated.
